--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,8 +32,8 @@
 }
 
 .logo-nav {
-  width: 10%;
-  margin-left: 2%;
+  width: 25%;
+  margin-left: 3%;
 }
 
 /*---------------------------- BOTON ACTIVO ---------------------------- */
@@ -152,4 +152,17 @@
   background-color: rgb(219, 219, 219);
   margin-top: 5%;
   margin-bottom: 0;
+}
+
+
+.logo2 {
+  width: 10%;
+  position: fixed;
+  z-index: 2;
+  bottom: -2%;
+  right: 10px;
+  transition: 1s;
+}
+.img-logo:hover {
+  transform: scale(80%);
 }
