--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
   border-style: dashed;
   border-width: 2px;
   border-color: rgb(139 83 125 / 41%);
-  --bs-btn-hover-border-color:#b4a2b4;
+  --bs-btn-hover-border-color: #b4a2b4;
 }
 .navbar {
   display: flex;
@@ -34,6 +34,11 @@
 .logo-nav {
   width: 25%;
   margin-left: 3%;
+  transition: 1s;
+}
+
+.logo-nav:hover {
+  transform: scale(80%);
 }
 
 /*---------------------------- BOTON ACTIVO ---------------------------- */
@@ -146,7 +151,13 @@
   margin-right: 1%;
   margin-top: 0.5%;
   margin-bottom: 0.5%;
+  transition: 1s;
 }
+
+.img-footer:hover {
+  transform: scale(122%);
+}
+
 
 .container-footer {
   background-color: rgb(219, 219, 219);
@@ -155,14 +166,4 @@
 }
 
 
-.logo2 {
-  width: 10%;
-  position: fixed;
-  z-index: 2;
-  bottom: -2%;
-  right: 10px;
-  transition: 1s;
-}
-.img-logo:hover {
-  transform: scale(80%);
-}
+
