--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,19 +26,16 @@
   display: flex;
   justify-content: space-between;
 }
-
 .container-nav {
   margin-right: 2%;
 }
-
 .logo-nav {
   width: 25%;
   margin-left: 3%;
-  transition: 1s;
+  transition: 0.5s;
 }
-
 .logo-nav:hover {
-  transform: scale(80%);
+  transform: scale(90%);
 }
 
 /*---------------------------- BOTON ACTIVO ---------------------------- */
@@ -56,13 +53,11 @@
 .carousel-inner {
   background: #dddddd;
 }
-
 .img {
   width: 50%;
   height: 50%;
   margin-left: 25%;
 }
-
 .carousel-control-prev-icon {
   background-image: url(../assets/izquierda2.png);
   width: 3rem;
@@ -72,6 +67,20 @@
   background-image: url(../assets/derecha2.png);
   width: 3rem;
   height: 3rem;
+}
+
+/*-------- TRANSITION AREA-BOTON CAROUSEL --------*/
+.carousel-control-prev {
+  transition: 0.2s;
+}
+.carousel-control-prev:hover {
+  transform: translateX(-2%);
+}
+.carousel-control-next {
+  transition: 0.2s;
+}
+.carousel-control-next:hover {
+  transform: translateX(+2%);
 }
 
 /*---------------------------- FIELDSET ----------------------------*/
@@ -87,7 +96,6 @@
   margin-top: 2%;
   margin-bottom: 2%;
 }
-
 .label {
   margin-right: 1%;
 }
@@ -104,7 +112,6 @@
   display: flex;
   width: 20%;
 }
-
 .form-control {
   margin-right: 3%;
 }
@@ -115,7 +122,6 @@
   display: flex;
   justify-content: space-evenly;
 }
-
 .btn-card {
   font-weight: bold;
   color: rgb(168, 77, 141);
@@ -125,17 +131,14 @@
   --bs-btn-hover-border-color: none;
   background: rgb(212, 189, 206);
 }
-
 .card-body {
   display: grid;
   justify-items: center;
 }
-
 .card-img-top {
   width: 287px;
   height: 147px;
 }
-
 .card-text {
   text-align: center;
 }
@@ -145,25 +148,18 @@
 .div-img-footer {
   margin-left: 2%;
 }
-
 .img-footer {
   width: 2.7%;
   margin-right: 1%;
   margin-top: 0.5%;
   margin-bottom: 0.5%;
-  transition: 1s;
+  transition: 0.50s;
 }
-
 .img-footer:hover {
   transform: scale(122%);
 }
-
-
 .container-footer {
   background-color: rgb(219, 219, 219);
   margin-top: 5%;
   margin-bottom: 0;
 }
-
-
-
