--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@
   --bs-btn-hover-bg: #b4a2b4;
   --bs-btn-hover-border-color: none;
 }
+
 .btn-nav2 {
   /*BOTON CUANDO ESTÁ EN LA PÁG*/
   border-style: dashed;
@@ -22,47 +23,54 @@
   border-color: rgb(139 83 125 / 41%);
   --bs-btn-hover-border-color: #b4a2b4;
 }
+
 .navbar {
   display: flex;
   justify-content: space-between;
 }
+
 .container-nav {
   margin-right: 2%;
 }
+
 .logo-nav {
   width: 25%;
   margin-left: 3%;
   transition: 0.5s;
 }
+
 .logo-nav:hover {
   transform: scale(90%);
 }
 
 /*---------------------------- BOTON ACTIVO ---------------------------- */
-.btn-check:checked + .btn,
+.btn-check:checked+.btn,
 .btn.active,
 .btn.show,
 .btn:first-child:active,
-:not(.btn-check) + .btn:active {
+:not(.btn-check)+.btn:active {
   color: var(--bs-btn-active-color);
   background-color: #8b748f;
   border-color: #896e83;
 }
 
-/*---------------------------- CAROUSEL ----------------------------*/
+/*---------------------------- CAROUSEL DE PAG ----------------------------*/
 .carousel-inner {
   background: #dddddd;
 }
+
 .img {
   width: 50%;
   height: 50%;
   margin-left: 25%;
 }
+
 .carousel-control-prev-icon {
   background-image: url(../assets/izquierda2.png);
   width: 3rem;
   height: 3rem;
 }
+
 .carousel-control-next-icon {
   background-image: url(../assets/derecha2.png);
   width: 3rem;
@@ -73,12 +81,15 @@
 .carousel-control-prev {
   transition: 0.2s;
 }
+
 .carousel-control-prev:hover {
   transform: translateX(-2%);
 }
+
 .carousel-control-next {
   transition: 0.2s;
 }
+
 .carousel-control-next:hover {
   transform: translateX(+2%);
 }
@@ -91,11 +102,13 @@
   border-right: none;
   border-color: thistle;
 }
+
 .fset {
   margin-left: 2%;
   margin-top: 2%;
   margin-bottom: 2%;
 }
+
 .label {
   margin-right: 1%;
 }
@@ -108,20 +121,66 @@
   margin-right: 1%;
   margin-top: -3.8%;
 }
+
 .form-inline {
   display: flex;
   width: 20%;
 }
+
 .form-control {
   margin-right: 3%;
 }
 
-/*---------------------------- CARTAS ----------------------------*/
-.CARTAS {
-  margin-top: 4%;
+/*---------------------------- JS GALERIA CARTAS ----------------------------*/
+.container-fluid {
+  margin-top: 3%;
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
+.galeria .card {
+  align-self: center;
+  margin: 10px 0px;
+  margin-right: 10px;
+  padding: 10px;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.card {
+  height: 450px;
+}
+
+.card-header {
+  height: 230px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.card-header img {
+  max-height: 230px;
+}
+
+.card-body {
+  height: 150px;
+}
+
+.card-footer {
+  height: 50px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: -3%
+}
+
+.awesonfoot:hover {
+  color: white;
+}
+
+
 .btn-card {
   font-weight: bold;
   color: rgb(168, 77, 141);
@@ -131,23 +190,66 @@
   --bs-btn-hover-border-color: none;
   background: rgb(212, 189, 206);
 }
+
+.p-card{
+  background-color: #8f6088;
+    text-align: center;
+    padding: 10px;
+    margin-right: 20%;
+    color: aliceblue;
+    border-radius: 6px;
+    margin-left: 20%;
+}
+
+
+.s-card{
+  margin: 3%;
+}
+
+.card-title{
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*---------------------------- CARTAS ----------------------------*/
+/* .CARTAS {
+  margin-top: 4%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
+
 .card-body {
   display: grid;
   justify-items: center;
 }
+
 .card-img-top {
   width: 287px;
   height: 147px;
 }
+
 .card-text {
   text-align: center;
-}
+} */
 
 /*---------------------------- FOOTER ----------------------------*/
 
 .div-img-footer {
   margin-left: 2%;
 }
+
 .img-footer {
   width: 2.7%;
   margin-right: 1%;
@@ -155,9 +257,11 @@
   margin-bottom: 0.5%;
   transition: 0.50s;
 }
+
 .img-footer:hover {
   transform: scale(122%);
 }
+
 .container-footer {
   background-color: rgb(219, 219, 219);
   margin-top: 5%;
