--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,3 +233,31 @@
   margin-top: 5%;
   margin-bottom: 0;
 }
+
+
+/*---------------------------- BOTON ARRIBA ----------------------------*/
+
+#button-up{
+  width: 50px;
+  height: 50px;
+  background: #b08dc4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 50%;
+  font-size: 20px;
+  position: fixed;
+  bottom: 7%;
+  right: 2%;
+  cursor: pointer;
+  border: 4px solid transparent;
+  transition: all 300ms ease;
+  transform: scale(0);
+}
+
+#button-up:hover{
+  transform: scale(1.1);
+  border-color: rgba(0,0,0,0.1);
+}
+
