--- a/styles/styles.css
+++ b/styles/styles.css
@@ -261,3 +261,13 @@ border: none;
   border-color: rgba(0,0,0,0.1);
 }
 
+/*--details--*/
+.card-detail{
+  max-width: 800px;
+  border: solid 3px #d11174;
+}
+
+.img-detail{
+  height: 200px;
+  object-fit: cover;
+}
